--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         distro:
           - centos8
-          - debian10
+#          - debian10
 
     steps:
       - name: Check out the codebase.
@@ -31,7 +31,7 @@ jobs:
         run: pip3 install ansible molecule molecule-docker docker yamllint ansible-lint
 
       - name: Run Molecule tests.
-        run: molecule test
+        run: molecule -vvv test
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
