--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,9 @@ jobs:
           python-version: '3.9'
 
       - name: Install test dependencies.
-        run: pip3 install ansible molecule molecule-docker docker yamllint ansible-lint
+        # run: pip3 install ansible molecule molecule-docker docker yamllint ansible-lint
+        run: pip3 install ansible molecule molecule-plugins[docker] docker yamllint ansible-lint
+
 
       - name: Run Molecule tests.
         run: molecule --debug test
