--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,9 @@ jobs:
         # run: pip3 install ansible molecule molecule-docker docker yamllint ansible-lint
         run: pip3 install ansible molecule molecule-plugins[docker] docker yamllint ansible-lint
 
+      - name: Install test dependencies.
+        # run: pip3 install ansible molecule molecule-docker docker yamllint ansible-lint
+        run: pip3 list
 
       - name: Run Molecule tests.
         run: molecule --debug test
