--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,11 +25,11 @@ jobs:
       - name: Set up Python 3.
         uses: actions/setup-python@v5
         with:
-          python-version: '3.9'
+          python-version: '3.x'
 
       - name: Install test dependencies.
         # run: pip3 install ansible molecule molecule-docker docker yamllint ansible-lint
-        run: pip3 install ansible molecule molecule-plugins molecule-docker docker yamllint ansible-lint
+        run: pip3 pip3 install ansible molecule molecule-plugins[docker] docker yamllint ansible-lint
 
       - name: Install test list dependencies.
         run: pip3 list
