--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Install test dependencies.
         # run: pip3 install ansible molecule molecule-docker docker yamllint ansible-lint
-        run: pip3 pip3 install ansible molecule molecule-plugins[docker] docker yamllint ansible-lint
+        run: pip3 install ansible molecule molecule-plugins[docker] docker yamllint ansible-lint
 
       - name: Install test list dependencies.
         run: pip3 list
