--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -16,6 +16,7 @@ platforms:
     cgroupns_mode: host
     privileged: true
     pre_build_image: true
+    cgroupns_mode: host
 provisioner:
   name: ansible
 verifier:
