--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,8 @@ jobs:
     strategy:
       matrix:
         distro:
-          - centos8
-#          - debian10
+#          - centos8
+          - debian10
 
     steps:
       - name: Check out the codebase.
