--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
         distro:
 #          - centos8
           - debian10
+          - geerlingguy/docker-centos8-ansible
 
     steps:
       - name: Check out the codebase.
