--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
 #          - debian10
           - ubuntu2404
           - ubuntu2204
-          - centos9
+#          - centos9
 #          - geerlingguy/docker-centos8-ansible:latest
 
     steps:
@@ -33,7 +33,9 @@ jobs:
 
       - name: Install test dependencies.
         # run: pip3 install ansible molecule molecule-docker docker yamllint ansible-lint
-        run: pip3 install ansible molecule molecule-plugins[docker] docker yamllint ansible-lint
+        #run: pip3 install ansible molecule molecule-plugins[docker] docker yamllint ansible-lint
+        run: pip3 install ansible molecule[docker] docker yamllint ansible-lint
+
 
       - name: Install test list dependencies.
         run: pip3 list
