--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,8 @@ jobs:
         distro:
 #          - centos8
 #          - debian10
-          - ubuntu2404
-          - ubuntu2204
+#          - ubuntu2404
+#          - ubuntu2204
 #          - centos9
 #          - geerlingguy/docker-centos8-ansible:latest
 
@@ -45,4 +45,4 @@ jobs:
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
-          MOLECULE_DISTRO: ${{ matrix.distro }}
+          #MOLECULE_DISTRO: ${{ matrix.distro }}
